@@ -20,7 +20,7 @@ TAGS
 ^do-
 etags
 ^(dt|Rplots|p1l1|stirlerr.*)\.pdf
-vignettes/.*:
+vignettes/.*[:~]
 vignettes/DPQ_.*\.tar\.gz$
 vignettes/.*\.(pdf|aux|out|tex)$
 vignettes/.*-woven
